--- a/InvestigationGame/InvestigationGame.csproj
+++ b/InvestigationGame/InvestigationGame.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agent.cs" />
+    <Compile Include="FootSoldier.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sensor.cs" />
+    <Compile Include="WeaknessOptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
