--- a/InvestigationGame/InvestigationGame.csproj
+++ b/InvestigationGame/InvestigationGame.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Agent.cs" />
     <Compile Include="AudioSensor.cs" />
     <Compile Include="FootSoldier.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
