--- a/InvestigationGame/InvestigationGame.csproj
+++ b/InvestigationGame/InvestigationGame.csproj
@@ -48,9 +48,17 @@
     <Compile Include="FootSoldier.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="Human.cs" />
+    <Compile Include="LightSensor.cs" />
+    <Compile Include="MagneticSensor.cs" />
+    <Compile Include="MotionSensor.cs" />
+    <Compile Include="OrganizationLeader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PulseSensor.cs" />
+    <Compile Include="SeniorCommander.cs" />
     <Compile Include="Sensor.cs" />
+    <Compile Include="SignalSensor.cs" />
+    <Compile Include="SquadLeader.cs" />
     <Compile Include="ThermalSensor.cs" />
     <Compile Include="WeaknessOptions.cs" />
   </ItemGroup>
